<resources>
    <string name="app_name">Gruppetto</string>
    <string name="location">Location</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="event_name">Nom de l\'évènement</string>
    <string name="de">De</string>
    <string name="ajouter_evenement">Ajouter evenement</string>
    <string name="checkbox">Toute la journée</string>
    <string name="a">A</string>
    <string name="localisation">Localisation</string>
</resources>
